<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item
        android:id="@+id/action_additional"
        android:title="@string/action_additional"
        android:orderInCategory="100"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_show_all_data"
        android:title="@string/action_show_all_data"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_create_csv"
        android:title="@string/action_create_csv"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_email"
        android:title="@string/action_send_email"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_db"
        android:orderInCategory="100"
        android:title="@string/action_delete_db"
        app:showAsAction="never"/>
</menu>